--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
+<nav>
+  <ng-container *ngFor="let route of routes">
+    <a *ngIf="route.path" [routerLink]="route.path">
+      {{ route.path | titlecase }}
+    </a>
+  </ng-container>
+</nav>
+
 <router-outlet></router-outlet>
