refactor: remove hover from cart component
This commit removes `HoverDirective` from cart component, now that there is a separate hover component

--- a/src/app/components/cart/components/content/content.component.html
+++ b/src/app/components/cart/components/content/content.component.html
@@ -18,7 +18,7 @@
 
     <div id="info-footer">
       <div id="total">£{{ checkout.totalPrice }}</div>
-      <a id="link" [class.disabled]="!checkout.ready" appHover>
+      <a id="link" [class.disabled]="!checkout.ready">
         <span>Checkout</span><i></i>
       </a>
     </div>
