--- a/src/app/components/cart/components/content/content.component.scss
+++ b/src/app/components/cart/components/content/content.component.scss
@@ -1,4 +1,4 @@
-@import 'src/app/components/sass/mixins', '../../directives/hover';
+@import 'src/app/components/sass/mixins';
 
 $checkout-hide-size: 0.6em;
 
@@ -67,7 +67,6 @@ $checkout-hide-size: 0.6em;
       border-radius: $button-border-radius;
       transform: none;
       transition: all $transition;
-      @include appHover;
 
       &.disabled {
         cursor: none;
@@ -80,8 +79,6 @@ $checkout-hide-size: 0.6em;
       }
 
       @include hover {
-        box-shadow: none;
-
         i {
           transform: rotate(45deg) translate(50%, -50%);
         }
