--- a/src/app/components/sass/mixins.scss
+++ b/src/app/components/sass/mixins.scss
@@ -247,7 +247,7 @@ $typography: (
     position: absolute;
     top: 0;
     bottom: 0;
-    left: $size / 2;
+    left: $size * 0.5;
     height: $size;
     width: 2px;
     background-color: $colour;
@@ -275,7 +275,7 @@ $typography: (
     content: '';
     display: block;
     position: absolute;
-    top: -$length / 2;
+    top: -$length * 0.5;
     right: $right;
     bottom: 0;
     width: $length;
